// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UIButton/> Snapshot renders without crashing using mount 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c0 > *:not(:last-child) {
  padding-right: 0.25em;
}

<UIButton>
  <styled.button
    onClick={[Function]}
    secondary={false}
  >
    <button
      className="c0"
      onClick={[Function]}
    >
      <span />
    </button>
  </styled.button>
</UIButton>
`;

exports[`<UIButton/> Snapshot renders without crashing using render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: .75rem 1.25rem;
  cursor: pointer;
}

.c0 > *:not(:last-child) {
  padding-right: 0.25em;
}

<button
  class="c0"
>
  <span />
</button>
`;

exports[`<UIButton/> Snapshot renders without crashing using shallow 1`] = `
<styled.button
  onClick={[Function]}
  secondary={false}
>
  <span />
</styled.button>
`;
